force-app/main/default/objects/Debug_Log__c/fields/Alumni_Payment__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni Payment</label>
    <referenceTo>Alumni_Payments__c</referenceTo>
    <relationshipLabel>Debug Logs</relationshipLabel>
    <relationshipName>Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>