force-app/main/default/objects/Debug_Log__c/fields/Billdesk_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Billdesk_Auth_Code__c</fullName>
    <formula>Student_Payment__r.BillDesk_Auth_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billdesk Auth Code</label>
    <type>Text</type>
</CustomField>