force-app/main/default/objects/Debug_Log__c/fields/Billdesk_Refund_Code__c.field-meta.xml
<CustomField>
    <fullName>Billdesk_Refund_Code__c</fullName>
    <formula>Student_Payment__r.BillDesk_Refund_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billdesk Refund Code</label>
    <type>Text</type>
</CustomField>