force-app/main/default/objects/Debug_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <type>TextArea</type>
</CustomField>