force-app/main/default/objects/Debug_Log__c/fields/Created_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Custom__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date(Custom)</label>
    <type>DateTime</type>
</CustomField>