force-app/main/default/objects/Debug_Log__c/fields/Data_Received__c.field-meta.xml
<CustomField>
    <fullName>Data_Received__c</fullName>
    <label>Data Received</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>