force-app/main/default/objects/Debug_Log__c/fields/Faculty_School_Program__c.field-meta.xml
<CustomField>
    <fullName>Faculty_School_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty/School/Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debug Logs</relationshipLabel>
    <relationshipName>Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>