force-app/main/default/objects/Debug_Log__c/fields/No_of_Failure_Jobs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Failure_Jobs__c</fullName>
    <label>No of Failure Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>