force-app/main/default/objects/Debug_Log__c/fields/No_of_Jobs_Processed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Jobs_Processed__c</fullName>
    <label>No of Jobs Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>