force-app/main/default/objects/Debug_Log__c/fields/Payment_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_Id__c</fullName>
    <label>Payment Reference Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>