force-app/main/default/objects/Debug_Log__c/fields/Processing_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Processing_API_Name__c</fullName>
    <label>Processing API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>