force-app/main/default/objects/Debug_Log__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Debug Logs</relationshipLabel>
    <relationshipName>Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>