force-app/main/default/objects/Debug_Log__c/fields/Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Status_Check__c</fullName>
    <formula>IF(Status_Code__c = 202, &quot;Success&quot;, &quot;Failure&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Check</label>
    <type>Text</type>
</CustomField>