force-app/main/default/objects/Debug_Log__c/fields/Student_Payment__c.field-meta.xml
<CustomField>
    <fullName>Student_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student  Payment</label>
    <referenceTo>Student_Payment__c</referenceTo>
    <relationshipLabel>Debug Logs</relationshipLabel>
    <relationshipName>Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>