force-app/main/default/objects/Debug_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Processing_API_Name__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Program_Plan__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Success,Failure</value>
    </filters>
    <label>All</label>
</ListView>