force-app/main/default/objects/Debug_Log__c/listViews/Today_s.listView-meta.xml
<ListView>
    <fullName>Today_s</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Processing_API_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Created_Date_Custom__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s</label>
</ListView>