force-app/main/default/objects/Debug_Log__c/listViews/X15_09_2022.listView-meta.xml
<ListView>
    <fullName>X15_09_2022</fullName>
    <columns>NAME</columns>
    <columns>Processing_API_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/25/2022 12:00 AM</value>
    </filters>
    <label>Razorpay Before Payment</label>
</ListView>